IDEA-303774 fix ConcurrentModificationException
GitOrigin-RevId: 69ed3521a3d41439481c226e2572c2a6ece5aa21